--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../image/icon.png" type="image/x-icon" />
     <title>Home | Espresso Hub</title>
     <!-- icons -->
-    <script src="https://kit.fontawesome.com/5716ed8254.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/5716ed8254.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- styles -->
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+
+    <!-- JavaScript -->
+    <script type="module" src="../js/app.js"></script>
   </head>
   <body>
     <!-- Navbar -->
@@ -16,13 +23,16 @@
     <span class="nav-btn" id="nav-btn"><i class="fa-solid fa-bars"></i></span>
     <nav class="navbar" id="navbar">
       <div class="navbar-header">
-        <span class="nav-close" id="nav-close"><i class="fa-solid fa-xmark"></i></span>
+        <span class="nav-close" id="nav-close"
+          ><i class="fa-solid fa-xmark"></i
+        ></span>
       </div>
       <ul class="nav-items">
         <li><a href="./index.html" class="nav-link">home</a></li>
         <li><a href="./skills.html" class="nav-link">skills</a></li>
         <li><a href="./about.html" class="nav-link">about</a></li>
         <li><a href="./products.html" class="nav-link">products</a></li>
+        <li><a href="./recipes.html" class="nav-link">recipes</a></li>
       </ul>
     </nav>
     <!-- Header -->
@@ -33,7 +43,7 @@
           distinct <br />
           coffee delights
         </h1>
-        <a href="./skills.html" class="btn banner-btn">explore</a>
+        <a href="./recipes.html" class="btn banner-btn">explore</a>
       </div>
     </header>
     <!-- End of Header -->
@@ -45,28 +55,40 @@
       <article class="skill">
         <span class="skill-icon"><i class="fa-solid fa-mug-saucer"></i></span>
         <h4 class="skill-title">made in india</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, nam.</p>
+        <p class="skill-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, nam.
+        </p>
       </article>
       <!-- End of Skill -->
       <!-- Skill -->
       <article class="skill">
-        <span class="skill-icon"><i class="fa-solid fa-champagne-glasses"></i></span>
+        <span class="skill-icon"
+          ><i class="fa-solid fa-champagne-glasses"></i
+        ></span>
         <h4 class="skill-title">relaxation</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, nam.</p>
+        <p class="skill-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, nam.
+        </p>
       </article>
       <!-- End of Skill -->
       <!-- Skill -->
       <article class="skill">
         <span class="skill-icon"><i class="fa-solid fa-bolt"></i></span>
         <h4 class="skill-title">energy</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, nam.</p>
+        <p class="skill-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, nam.
+        </p>
       </article>
       <!-- End of Skill -->
       <!-- Skill -->
       <article class="skill">
-        <span class="skill-icon"><i class="fa-solid fa-mortar-pestle"></i></span>
+        <span class="skill-icon"
+          ><i class="fa-solid fa-mortar-pestle"></i
+        ></span>
         <h4 class="skill-title">traditional brews</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, nam.</p>
+        <p class="skill-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, nam.
+        </p>
       </article>
       <!-- End of Skill -->
     </section>
@@ -77,7 +99,11 @@
         <!-- about img -->
         <article class="about-img">
           <div class="about-picture-container">
-            <img src="./images/about-bcg.jpg" alt="coffee house" class="about-picture" />
+            <img
+              src="../image/about-bcg.jpg"
+              alt="coffee house"
+              class="about-picture"
+            />
           </div>
         </article>
         <!-- about info -->
@@ -89,12 +115,12 @@
           </div>
           <!-- end of section title -->
           <p class="section-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste optio laboriosam ea nihil eveniet
-            architecto.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste optio
+            laboriosam ea nihil eveniet architecto.
           </p>
           <p class="section-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste optio laboriosam ea nihil eveniet
-            architecto.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste optio
+            laboriosam ea nihil eveniet architecto.
           </p>
           <a href="./about.html" class="btn">learn more</a>
         </article>
@@ -113,8 +139,9 @@
           </div>
           <!-- end of section title -->
           <p class="products-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum corporis adipisci a labore
-            natus accusantium vel. Saepe quod architecto aperiam perspiciatis? Quaerat, illo nihil?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+            dolorum corporis adipisci a labore natus accusantium vel. Saepe quod
+            architecto aperiam perspiciatis? Quaerat, illo nihil?
           </p>
           <a href="./products.html" class="btn">inventory</a>
         </article>
@@ -123,21 +150,33 @@
         <article class="products-inventory clearfix">
           <!-- product -->
           <div class="product">
-            <img src="./images/product-1.jpg" alt="pumpkin latte" class="product-img" />
+            <img
+              src="../image/product-1.jpg"
+              alt="pumpkin latte"
+              class="product-img"
+            />
             <h4 class="product-title">pumpkin spice latte</h4>
             <h4 class="product-price">₹414.75</h4>
           </div>
           <!-- end of product -->
           <!-- product -->
           <div class="product">
-            <img src="./images/product-2.jpg" alt="frappuccino" class="product-img" />
+            <img
+              src="../image/product-2.jpg"
+              alt="frappuccino"
+              class="product-img"
+            />
             <h4 class="product-title">frappuccino</h4>
             <h4 class="product-price">₹483.00</h4>
           </div>
           <!-- end of product -->
           <!-- product -->
           <div class="product">
-            <img src="./images/product-3.jpg" alt="shakes" class="product-img" />
+            <img
+              src="../image/product-3.jpg"
+              alt="shakes"
+              class="product-img"
+            />
             <h4 class="product-title">milkshake mania</h4>
             <h4 class="product-price">₹367.50</h4>
           </div>
@@ -159,14 +198,21 @@
         <!-- card -->
         <article class="service-card">
           <div class="service-img-container">
-            <img src="./images/service-1.jpg" alt="unique brews" class="service-img" />
-            <span class="service-icon"><i class="fa-solid fa-mug-hot"></i></span>
+            <img
+              src="../image/service-1.jpg"
+              alt="unique brews"
+              class="service-img"
+            />
+            <span class="service-icon"
+              ><i class="fa-solid fa-mug-hot"></i
+            ></span>
           </div>
           <!-- service info -->
           <div class="service-info">
             <h4>unique brews</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae nihil, nemo optio voluptatum quas ad.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae
+              nihil, nemo optio voluptatum quas ad.
             </p>
             <a href="#" class="btn service-btn">read more</a>
           </div>
@@ -175,13 +221,18 @@
         <!-- card -->
         <article class="service-card">
           <div class="service-img-container">
-            <img src="./images/service-2.jpg" alt="home delivery" class="service-img" />
+            <img
+              src="../image/service-2.jpg"
+              alt="home delivery"
+              class="service-img"
+            />
             <span class="service-icon"><i class="fa-solid fa-house"></i></span>
           </div>
           <div class="service-info">
             <h4>home delivery</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae nihil, nemo optio voluptatum quas ad.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae
+              nihil, nemo optio voluptatum quas ad.
             </p>
             <a href="./products.html" class="btn service-btn">read more</a>
           </div>
@@ -190,13 +241,20 @@
         <!-- card -->
         <article class="service-card">
           <div class="service-img-container">
-            <img src="./images/service-3.jpg" alt="barista workshop" class="service-img" />
-            <span class="service-icon"><i class="fa-solid fa-people-arrows"></i></span>
+            <img
+              src="../image/service-3.jpg"
+              alt="barista workshop"
+              class="service-img"
+            />
+            <span class="service-icon"
+              ><i class="fa-solid fa-people-arrows"></i
+            ></span>
           </div>
           <div class="service-info">
             <h4>barista workshops</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae nihil, nemo optio voluptatum quas ad.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae
+              nihil, nemo optio voluptatum quas ad.
             </p>
             <a href="./products.html" class="btn service-btn">read more</a>
           </div>
@@ -213,7 +271,9 @@
           <!-- contact item -->
           <div class="contact-item">
             <h4 class="contact-title">
-              <span class="contact-icon"><i class="fa-solid fa-location-arrow"></i></span>
+              <span class="contact-icon"
+                ><i class="fa-solid fa-location-arrow"></i
+              ></span>
               address
             </h4>
             <h4 class="contact-text">
@@ -225,7 +285,9 @@
           <!-- contact item -->
           <div class="contact-item">
             <h4 class="contact-title">
-              <span class="contact-icon"><i class="fa-solid fa-envelope"></i></span>
+              <span class="contact-icon"
+                ><i class="fa-solid fa-envelope"></i
+              ></span>
               email
             </h4>
             <h4 class="contact-text">email@email.com</h4>
@@ -234,7 +296,9 @@
           <!-- contact item -->
           <div class="contact-item">
             <h4 class="contact-title">
-              <span class="contact-icon"><i class="fa-solid fa-phone"></i></span>
+              <span class="contact-icon"
+                ><i class="fa-solid fa-phone"></i
+              ></span>
               telephone
             </h4>
             <h4 class="contact-text">+91 82730 06455</h4>
@@ -247,9 +311,24 @@
           <form action="">
             <div class="form-group">
               <!-- inputs -->
-              <input type="text" placeholder="name" class="form-control" name="name" />
-              <input type="email" placeholder="email" class="form-control" name="email" />
-              <textarea name="message" placeholder="message" class="form-control" rows="5"></textarea>
+              <input
+                type="text"
+                placeholder="name"
+                class="form-control"
+                name="name"
+              />
+              <input
+                type="email"
+                placeholder="email"
+                class="form-control"
+                name="email"
+              />
+              <textarea
+                name="message"
+                placeholder="message"
+                class="form-control"
+                rows="5"
+              ></textarea>
             </div>
             <button type="submit" class="btn submit-btn">submit here</button>
           </form>
@@ -262,17 +341,22 @@
     <footer class="footer">
       <div class="section-center">
         <div class="social-icons">
-          <a href="#" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" class="social-icon"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="#" class="social-icon"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="#" class="social-icon"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </div>
         <h4 class="footer-text">
-          &copy;<span id="date"></span> <span class="company">espresso hub</span> all rights reserved
+          &copy;<span id="date"></span>
+          <span class="company">espresso hub</span> all rights reserved
         </h4>
       </div>
     </footer>
     <!-- End of Footer -->
-    <!-- JavaScript -->
-    <script src="./app.js"></script>
   </body>
 </html>
