--- a/src/html/products.html
+++ b/src/html/products.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../image/icon.png" type="image/x-icon" />
     <title>Products | Espresso Hub</title>
     <!-- icons -->
-    <script src="https://kit.fontawesome.com/5716ed8254.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/5716ed8254.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- styles -->
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <!-- JavaScript -->
+    <script type="module" src="../js/app.js"></script>
   </head>
   <body>
     <!-- Navbar -->
@@ -16,13 +22,16 @@
     <span class="nav-btn" id="nav-btn"><i class="fa-solid fa-bars"></i></span>
     <nav class="navbar" id="navbar">
       <div class="navbar-header">
-        <span class="nav-close" id="nav-close"><i class="fa-solid fa-xmark"></i></span>
+        <span class="nav-close" id="nav-close"
+          ><i class="fa-solid fa-xmark"></i
+        ></span>
       </div>
       <ul class="nav-items">
         <li><a href="./index.html" class="nav-link">home</a></li>
         <li><a href="./skills.html" class="nav-link">skills</a></li>
         <li><a href="./about.html" class="nav-link">about</a></li>
         <li><a href="./products.html" class="nav-link">products</a></li>
+        <li><a href="./recipes.html" class="nav-link">recipes</a></li>
       </ul>
     </nav>
     <!-- Header -->
@@ -33,7 +42,7 @@
           distinct <br />
           coffee delights
         </h1>
-        <a href="./skills.html" class="btn banner-btn">explore</a>
+        <a href="./recipes.html" class="btn banner-btn">explore</a>
       </div>
     </header>
     <!-- End of Header -->
@@ -49,8 +58,9 @@
           </div>
           <!-- end of section title -->
           <p class="products-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum corporis adipisci a labore
-            natus accusantium vel. Saepe quod architecto aperiam perspiciatis? Quaerat, illo nihil?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+            dolorum corporis adipisci a labore natus accusantium vel. Saepe quod
+            architecto aperiam perspiciatis? Quaerat, illo nihil?
           </p>
           <a href="./products.html" class="btn">inventory</a>
         </article>
@@ -59,21 +69,33 @@
         <article class="products-inventory clearfix">
           <!-- product -->
           <div class="product">
-            <img src="./images/product-1.jpg" alt="pumpkin latte" class="product-img" />
+            <img
+              src="../image/product-1.jpg"
+              alt="pumpkin latte"
+              class="product-img"
+            />
             <h4 class="product-title">pumpkin spice latte</h4>
             <h4 class="product-price">₹414.75</h4>
           </div>
           <!-- end of product -->
           <!-- product -->
           <div class="product">
-            <img src="./images/product-2.jpg" alt="frappuccino" class="product-img" />
+            <img
+              src="../image/product-2.jpg"
+              alt="frappuccino"
+              class="product-img"
+            />
             <h4 class="product-title">frappuccino</h4>
             <h4 class="product-price">₹483.00</h4>
           </div>
           <!-- end of product -->
           <!-- product -->
           <div class="product">
-            <img src="./images/product-3.jpg" alt="shakes" class="product-img" />
+            <img
+              src="../image/product-3.jpg"
+              alt="shakes"
+              class="product-img"
+            />
             <h4 class="product-title">milkshake mania</h4>
             <h4 class="product-price">₹367.50</h4>
           </div>
@@ -87,17 +109,22 @@
     <footer class="footer">
       <div class="section-center">
         <div class="social-icons">
-          <a href="#" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" class="social-icon"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="#" class="social-icon"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="#" class="social-icon"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </div>
         <h4 class="footer-text">
-          &copy;<span id="date"></span> <span class="company">espresso hub</span> all rights reserved
+          &copy;<span id="date"></span>
+          <span class="company">espresso hub</span> all rights reserved
         </h4>
       </div>
     </footer>
     <!-- End of Footer -->
-    <!-- JavaScript -->
-    <script src="./app.js"></script>
   </body>
 </html>
